logs/Slang/generated/keywords/5.6.2--keyword_struct.sv.log
name: keyword_struct
description: The 'struct' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_struct.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_struct.sv:8:8: error: expected declarator
    bit struct;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_struct.sv:8:15: error: expected '{'
    bit struct;
              ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_struct.sv:8:15: error: expected declarator
    bit struct;
              ^
